# parsing_microsoft_tg_bot

./: .env.example  .gitignore  config.py  config_bot.py  dock.txt  main.py  preloaded_state_pass.json  pyproject.toml  test_requests.py
apps/app/database/: repositories_manager.py
apps/bot/handlers/: add_link_handler.py  auto_parsing.py  base_menu.py  big_parser.py  formulas_exchange_handler.py  get_data.py  parser_price.py  parsing_sale.py  sale.py
apps/bot/keyboards/: auto_parsing_keyboards.py  big_parser_keyboards.py  get_data_keyboards.py  (+2 more)
bot/: config.py
bot/handlers/: add_link_handler.py  auto_parsing.py  base_menu.py  big_parser.py  get_data.py  parsing_sale.py  sale.py
bot/keyboards/: auto_parsing_keyboards.py  base_menu_keyboards.py  big_parser_keyboards.py  get_data_keyboards.py  pars_price_product_keyboards.py  parsing_sale_keyboards.py  sale_keyboards.py
bot/middleware/: authorization.py  database.py
database/: db.py  db_bot.py  repositories_manager.py
docker/postgres_db/: .env.example  docker-compose.yaml
entities/: parser_data_entity.py
operations/: calculate.py  last_pars.py  parsing_price_products.py  parsing_products_for_links.py  save_data.py  start_big_parser.py
parser/: parsing_links_for_auto_pars.py  parsing_price_products.py  parsing_products_from_links.py  start_big_parser.py
service/: auto_pars_shedule.py  calculate.py  generate_text_auto_pars.py  last_pars.py  parsing_links.py  parsing_links_for_auto_pars.py  parsing_nigeria.py  parsing_price_products.py  parsing_products_from_links.py  save_data.py  start_big_parser.py
(+81 files in other folders)
